<resources>
    <string name="app_name">Car Sharing</string>
    <string name="sign_up">Sign up</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="already_account">Already have an account?</string>
    <string name="dont_have_account">"Don't have an account?"</string>
    <string name="sign_in">Sign in</string>
    <string name="choose_a_car_nearby">Choose a car nearby</string>
    <string name="street">г.Москва, ул. Островитянова</string>
    <string name="take_a_car">Take a car</string>
    <string name="price">1 min = 70p</string>
    <string name="car_name">Volkswagen</string>
</resources>