<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="9dp"
            android:background="@drawable/shapebutton">

            <LinearLayout
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/car_image"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:src="@drawable/polo_w" />

                <TextView
                    android:id="@+id/car_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="19dp"
                    android:text="@string/car_name"
                    android:textColor="@color/black"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginVertical="25dp"
                android:layout_marginStart="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/address_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_light"
                    android:text="@string/street"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginVertical="22dp"
                android:layout_marginStart="25dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/take_a_car_button"
                    android:layout_width="50dp"
                    android:layout_height="21dp"
                    android:background="@drawable/shape_button_takeacar"
                    android:text="@string/take_a_car"
                    android:textSize="7sp" />

                <TextView
                    android:id="@+id/price_text_underbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="3dp"
                    android:textSize="7sp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>